--- a/Draw/Controller/Chat/ChatController.xib
+++ b/Draw/Controller/Chat/ChatController.xib
@@ -149,11 +149,11 @@
 								<reference key="IBUIHighlightedTitleColor" ref="357096150"/>
 								<reference key="IBUINormalTitleColor" ref="357096150"/>
 								<reference key="IBUINormalTitleShadowColor" ref="1043758634"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="338801675">
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="886707040">
+								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
@@ -211,9 +211,9 @@
 									<object class="IBUIButton" id="777707669">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{213, 18}, {49, 33}}</string>
+										<string key="NSFrame">{{216, 18}, {49, 33}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSNextKeyView" ref="846355833"/>
+										<reference key="NSNextKeyView" ref="996479208"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="357096150"/>
 										<bool key="IBUIOpaque">NO</bool>
@@ -224,14 +224,22 @@
 										<reference key="IBUIHighlightedTitleColor" ref="357096150"/>
 										<reference key="IBUINormalTitleColor" ref="1043758634"/>
 										<reference key="IBUINormalTitleShadowColor" ref="357096150"/>
-										<reference key="IBUIFontDescription" ref="338801675"/>
-										<reference key="IBUIFont" ref="886707040"/>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">2</int>
+											<double key="pointSize">14</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica-Bold</string>
+											<double key="NSSize">14</double>
+											<int key="NSfFlags">16</int>
+										</object>
 									</object>
 									<object class="IBUILabel" id="996479208">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{213, 18}, {49, 33}}</string>
+										<string key="NSFrame">{{216, 18}, {49, 33}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
+										<reference key="NSNextKeyView" ref="846355833"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -251,11 +259,12 @@
 											<double key="NSSize">15</double>
 											<int key="NSfFlags">16</int>
 										</object>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
 									<object class="IBUILabel" id="923374262">
 										<reference key="NSNextResponder" ref="876821904"/>
-										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{67, 13}, {105, 24}}</string>
+										<int key="NSvFlags">301</int>
+										<string key="NSFrame">{{63, 11}, {110, 24}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="974060178"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -278,11 +287,12 @@
 											<double key="NSSize">16</double>
 											<int key="NSfFlags">16</int>
 										</object>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
 									<object class="IBUILabel" id="1004384965">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{67, 41}, {44, 18}}</string>
+										<string key="NSFrame">{{63, 41}, {50, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="637224567"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -291,7 +301,7 @@
 										<int key="IBUIContentMode">7</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">男</string>
+										<string key="IBUIText">Female</string>
 										<reference key="IBUITextColor" ref="525190894"/>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
@@ -310,7 +320,7 @@
 									<object class="IBUILabel" id="637224567">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{118, 41}, {80, 18}}</string>
+										<string key="NSFrame">{{120.5, 41}, {80, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="777707669"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -319,18 +329,19 @@
 										<int key="IBUIContentMode">7</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText"/>
+										<string key="IBUIText">广东广州</string>
 										<reference key="IBUITextColor" ref="525190894"/>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
 										<reference key="IBUIFontDescription" ref="156272753"/>
 										<reference key="IBUIFont" ref="588356733"/>
+										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
 									<object class="IBUIImageView" id="974060178">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{180, 16}, {18, 18}}</string>
+										<string key="NSFrame">{{182, 14}, {18, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="1004384965"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -580,11 +591,11 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="974060178"/>
 							<reference ref="637224567"/>
-							<reference ref="1004384965"/>
 							<reference ref="777707669"/>
 							<reference ref="878386842"/>
 							<reference ref="923374262"/>
 							<reference ref="996479208"/>
+							<reference ref="1004384965"/>
 						</array>
 						<reference key="parent" ref="422428427"/>
 					</object>
